tests/ui/trait-bounds/associated-error-bound-issue-145586.stderr
error[E0308]: mismatched types
  --> $DIR/associated-error-bound-issue-145586.rs:32:33
   |
LL | impl<'de, T, E> Deserializer<'de> for Wrapper<'de, T, E>
   |              - expected this type parameter
...
LL |     fn deserialize_ignored_any<V>(self, visitor: V) -> Result<V::Value, Self::Error>
   |                                                        ----------------------------- expected `Result<<V as Visitor<'de>>::Value, E>` because of return type
...
LL |             Ok(deserializer) => deserializer.deserialize_ignored_any(visitor),
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<<V as Visitor<'_>>::Value, E>`, found `Result<<V as Visitor<'_>>::Value, ...>`
   |
   = note: expected enum `Result<_, E>`
              found enum `Result<_, <T as Deserializer<'de>>::Error>`
help: consider further restricting this bound
   |
LL |     T: Deserializer<'de, Error = E>,
   |                        +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
